# nappgui_products

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
vcpkg/nappgui/: fix-install-paths.patch  portfile.cmake  usage  vcpkg.json
